# boca-problems

./: .gitignore  CMakeLists.txt
problema002/: problema2.c
problema003/: problema3.c
problema004/: problema4.c
problema005/: problema5.c
problema006/: problema6.c
problema007/: problema7.c
problema008/: problema8.c
problema009/: problema9.c
problema010/: problema10.c
problema011/: problema11.c
problema012/: problema12.c
problema013/: problema13.c
problema014/: problema14.c
problema015/: problema15.c
problema016/: problema16.c
problema017/: problema17.c
problema018/: problema18.c
problema019/: problema19.c
problema020/: problema20.c
problema021/: problema21.c
problema022/: problema22.c
problema023/: problema23.c
problema024/: problema24.c
problema025/: problema25.c
problema026/: problema26.c
problema027/: problema27.c
problema028/: problema28.c
problema1/: problema1.c
problema10/: problema10.c
problema2/: problema2.c
problema4/: problema4.c
problema5/: problema5.c
problema6/: problema6.c
problema7/: problema7.c
problema8/: problema8.c
problema9/: problema9.c
