cmake_minimum_required(VERSION 3.5)
project(c_problems)

add_executable(problema1 problema001/problema1.c)

add_executable(problema2 problema002/problema2.c)

add_executable(problema3 problema003/problema3.c)
target_link_libraries(problema3 m)

add_executable(problema4 problema004/problema4.c)
target_link_libraries(problema4 m)

add_executable(problema5 problema005/problema5.c)
target_link_libraries(problema5 m)

add_executable(problema6 problema006/problema6.c)

add_executable(problema7 problema007/problema7.c)
target_link_libraries(problema7 m)

add_executable(problema8 problema008/problema8.c)

add_executable(problema9 problema009/problema9.c)
target_link_libraries(problema9 m)

add_executable(problema10 problema010/problema10.c)

add_executable(problema11 problema011/problema11.c)

add_executable(problema12 problema012/problema12.c)

add_executable(problema13 problema013/problema13.c)
target_link_libraries(problema13 m)

add_executable(problema14 problema014/problema14.c)

add_executable(problema15 problema015/problema15.c)
target_link_libraries(problema15 m)

add_executable(problema16 problema016/problema16.c)

add_executable(problema17 problema017/problema17.c)

add_executable(problema18 problema018/problema18.c)

add_executable(problema19 problema019/problema19.c)

add_executable(problema20 problema020/problema20.c)

add_executable(problema21 problema021/problema21.c)

add_executable(problema22 problema022/problema22.c)

add_executable(problema23 problema023/problema23.c)

add_executable(problema24 problema024/problema24.c)

add_executable(problema25 problema025/problema25.c)

add_executable(problema26 problema026/problema26.c)

add_executable(problema27 problema027/problema27.c)

add_executable(problema28 problema028/problema28.c)

add_executable(problema29 problema029/problema29.c)

add_executable(problema30 problema030/problema30.c)

add_executable(problema31 problema031/problema31.c)

add_executable(problema32 problema032/problema32.c)